# glxp

./: .gitignore  LICENSE  README.md  TODO.txt  glxp_dev_home.bat  glxp_dev_laptop.bat  glxp_dev_ubi.bat  setup_env_home.lnk  setup_env_laptop.lnk  setup_env_ubi.lnk
cmake/: FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake
data/test/shaders/: simple.frag  simple.vert  tonemap.frag
data/tonemap/shaders/: draw_lut.frag  draw_lut.vert  fullscreen.frag  simple.vert  tonemap.frag  tonemap.vert
src/: CMakeLists.txt
src/common/: app.h  arcball_camera.cpp  arcball_camera.h  gl_utils.cpp  gl_utils.h  glm_usage.h  procgen.cpp  procgen.h  stb_image_impl.cpp  texture.cpp  texture.h  tiny_gltf.cpp  tiny_gltf.h  utils.cpp  utils.h
src/test/: CMakeLists.txt  app_test.cpp  app_test.h  glm_usage.h  main.cpp
src/tonemap/: CMakeLists.txt  app_test.cpp  app_test.h  main.cpp
src/tonemap/FilmicCurve/: FilmicColorGrading.h
